[package]
name = "kelvin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
predicates = "1"
assert_cmd = "1"
bcrypt = "0.15.1"
rand_core = "0.6.4"
rsa = "0.9.6"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"

[profile.dev]
opt-level = 3
