workspace = { members = ["tui"] }

[package]
name = "kelvin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
bcrypt = "0.15.1"
rand_core = "0.6.4"
rsa = "0.9.6"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
clap = "4.5.4"
rpassword = "7.3.1"
clipboard = "0.5.0"

[profile.dev]
opt-level = 1
