workspace = { members = ["./"] }

[package]
name = "kelvin"
version = "0.1.0"
edition = "2021"
authors = ["Dompeh Kofi Bright <kekelidompeh@gmail.com>"]
description = "Secure terminal password manager for linux"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/db-keli/kelvin"
repository = "https://github.com/db-keli/kelvin"
keywords = ["password-manager", "encryption", "crypto"]
categories = ["command-line-utilities", "security"]

[dependencies]
rand = "0.8.5"
bcrypt = "0.15.1"
rand_core = "0.6.4"
rsa = "0.9.6"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
clap = "4.5.4"
rpassword = "7.3.1"
clipboard = "0.5.0"

[profile.dev]
opt-level = 0
debug = true
panic = "abort"

[profile.test]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
panic = "unwind"
lto = true
codegen-units = 1
strip = true

[profile.bench]
opt-level = 3
debug = false

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.13.0"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell", "msi"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
    "x86_64-unknown-linux-gnu",
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-pc-windows-msvc",
]
# Publish jobs to run in CI
pr-run-mode = "upload"
# Whether to install an updater program
install-updater = false
# Skip checking whether the specified configuration files are up to date
allow-dirty = ["ci", "msi"]

# Configuration for 'cargo-run-bin'
[metadata.bin]
cargo-dist = { version = "0.5.0", locked = true }
